assets/css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;


@layer components {

    html {
        @apply scroll-smooth antialiased;
    }

    section {
        z-index: 0;
    }

    .transparent-button {
        @apply py-3 px-5 w-full hover:text-gray-700 font-medium rounded-xl !bg-transparent transition ease-in-out duration-200
    }

    .primary-button {
        @apply py-3 px-5 w-full text-white font-semibold rounded-xl focus:ring focus:ring-indigo-300 bg-indigo-600 hover:bg-indigo-700 transition ease-in-out duration-200
    }

    .custom-input {
        @apply px-4 pr-1 py-2.5 w-full text-gray-500 font-medium placeholder-gray-500 bg-white outline-none border border-gray-300 rounded-lg focus:ring focus:ring-indigo-300
    }

    button[disabled] {
        @apply cursor-not-allowed opacity-60;
    }

    .primary-gradient {
        @apply text-transparent bg-clip-text bg-gradient-to-r from-indigo-800 to-indigo-500
    }

}

